--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel res/jsx -d res/js",
     "start": "electron ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^13.1.9"
+    "electron": "^13.1.9",
+    "electron-is-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2"
+  },
+  "babel": {
+    "presets": [
+      "react"
+    ]
   }
 }
