--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "electron-next": "^3.1.5",
-    "electron-is-dev": "^2.0.0"
+    "bip39": "^3.0.4",
+    "electron-is-dev": "^2.0.0",
+    "electron-next": "^3.1.5"
   }
 }
