--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Jason Chavannes",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^13.1.9",
+    "electron": "^13.6.3",
     "electron-builder": "^22.10.5",
     "next": "^11.1.2",
     "react": "^17.0.2",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bip39": "^3.0.4",
+    "crypto-js": "^4.1.1",
     "electron-is-dev": "^2.0.0",
     "electron-next": "^3.1.5"
   }
