--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "electron": "^13.6.3",
     "electron-builder": "^22.10.5",
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@bitcoin-dot-com/bitcoincashjs2-lib": "^4.1.0",
+    "bip32": "^2.0.5",
     "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
     "electron-is-dev": "^2.0.0",
