--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "electron": "^13.6.3",
     "electron-builder": "^22.10.5",
     "electron-packager": "^15.4.0",
+    "electron-rebuild": "^3.2.7",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
     "@bitcoin-dot-com/bitcoincashjs2-lib": "^4.1.0",
+    "better-sqlite3": "^7.5.0",
     "bip32": "^2.0.5",
     "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
