--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
     "electron-is-dev": "^2.0.0",
-    "electron-next": "^3.1.5"
+    "electron-next": "^3.1.5",
+    "ws": "^8.5.0"
   }
 }
