--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "Memo Desktop Application",
   "main": "main/index.js",
+  "repository": "github.com/memocash/desktop",
   "scripts": {
     "start": "electron .",
     "create": "npx electron-packager . Memo --overwrite --icon ./main/assets/memo-logo-small.icns --out dist",
@@ -11,13 +12,13 @@
     "dist": "npm run build && electron-builder"
   },
   "author": "Memo Technology, Inc.",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "devDependencies": {
-    "electron": "^17.1.0",
-    "electron-builder": "^22.10.5",
-    "electron-packager": "^15.4.0",
+    "electron": "^19.0.8",
+    "electron-builder": "^23.1.0",
+    "electron-packager": "^15.5.1",
     "electron-rebuild": "^3.2.8",
-    "next": "^12.1.0",
+    "next": "^12.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
