--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto-js": "^4.1.1",
     "electron-is-dev": "^2.0.0",
     "electron-next": "^3.1.5",
+    "react-icons": "^4.4.0",
     "ws": "^8.5.0"
   }
 }
