--- a/package.json
+++ b/package.json
@@ -9,27 +9,29 @@
     "create": "npx electron-packager . Memo --overwrite --icon ./main/assets/memo-logo-small.icns --out dist",
     "build": "next build renderer && next export renderer",
     "pack-app": "npm run build && electron-builder --dir",
+    "rebuild": "electron-rebuild",
     "dist": "npm run build && electron-builder"
   },
   "author": "Memo Technology, Inc.",
   "license": "Apache-2.0",
   "devDependencies": {
-    "electron": "^22.0.0",
-    "electron-builder": "^23.6.0",
+    "electron": "24.1.3",
+    "electron-builder": "^24.3.0",
     "electron-packager": "^17.1.1",
     "electron-rebuild": "^3.2.8",
-    "next": "^12.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^13.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@bitcoin-dot-com/bitcoincashjs2-lib": "^4.1.0",
-    "better-sqlite3": "7.5.0",
-    "bip32": "^2.0.5",
+    "better-sqlite3": "8.3.0",
+    "bip32": "^4.0.0",
     "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
     "electron-is-dev": "^2.0.0",
     "electron-next": "^3.1.5",
+    "node-gyp": "^9.3.1",
     "react-icons": "^4.4.0",
     "react-linkify": "^1.0.0-alpha",
     "ws": "^8.5.0"
